# timerpoll

./: readme.md
demo/: demo.cpp  makefile
include/: timer.h  timer_poll.h
src/: CMakeLists.txt  timer.cpp  timer_poll.cpp
